show contribution on the sidebar

--- a/webapp/src/components/HomePage/Sidebar/ExpandedSidebar/WalletParcels/WalletParcels.css
+++ b/webapp/src/components/HomePage/Sidebar/ExpandedSidebar/WalletParcels/WalletParcels.css
@@ -1,10 +1,9 @@
-
 .WalletParcels {
 }
 
 .WalletParcels .heading .parcel-count {
   margin-left: 18px;
-  font-family: "Source Sans Pro", Helvetica, sans-serif;
+  font-family: 'Source Sans Pro', Helvetica, sans-serif;
 }
 
 .WalletParcels .table-row {
@@ -23,11 +22,12 @@
   width: 100%;
   padding-top: 24px;
   padding-left: 24px;
+  padding-bottom: 24px;
   font-size: 15px;
 }
 
 .WalletParcels .table-row.gray {
-  background-color: #FBFBFB;
+  background-color: #fbfbfb;
 }
 
 .WalletParcels .table .col {
@@ -35,14 +35,24 @@
   float: left;
 }
 
-.WalletParcels .table .col-editing { width: 90%; }
-.WalletParcels .table .col-coord   { width: 20%; }
-.WalletParcels .table .col-price   { width: 30%; }
-.WalletParcels .table .col-name    { width: 40%; }
-.WalletParcels .table .col-actions { width: 10%; }
+.WalletParcels .table .col-editing {
+  width: 90%;
+}
+.WalletParcels .table .col-coord {
+  width: 20%;
+}
+.WalletParcels .table .col-price {
+  width: 30%;
+}
+.WalletParcels .table .col-name {
+  width: 40%;
+}
+.WalletParcels .table .col-actions {
+  width: 10%;
+}
 
 .WalletParcels .table .col-editing {
-  font-family: "Source Sans Pro SemiBold", Helvetica, sans-serif;
+  font-family: 'Source Sans Pro SemiBold', Helvetica, sans-serif;
 }
 
 .WalletParcels .col-actions {
@@ -73,7 +83,7 @@
 .WalletParcels .field textarea {
   width: 66%;
   padding: 10px;
-  box-shadow: 0 2px 6px 0 rgba(0,0,0,0.1);
+  box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.1);
   border-radius: 2px;
   border: none;
 }
@@ -87,10 +97,9 @@
   outline-width: 0;
 }
 
-
 .WalletParcels .heading .parcel-count,
 .WalletParcels .table-row-empty,
 .WalletParcels .col-actions,
 .WalletParcels .field label {
-  color: #7B7B7B;
+  color: #7b7b7b;
 }
