--- a/webapp/src/components/HomePage/Sidebar/ExpandedSidebar/WalletContributions/WalletContributions.css
+++ b/webapp/src/components/HomePage/Sidebar/ExpandedSidebar/WalletContributions/WalletContributions.css
@@ -8,8 +8,8 @@
 
 .WalletContributions .table-row {
   width: 100%;
-  height: 64px;
-  padding: 24px;
+  height: 68px;
+  padding: 22px 24px;
 }
 
 .WalletContributions .parcel-row-editing {
@@ -32,13 +32,17 @@
 .WalletContributions .table .col {
   height: 100%;
   float: left;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .WalletContributions .table .col-district {
-  width: 60%;
+  width: 40%;
+  margin-right: 20px;
 }
 .WalletContributions .table .col-parcels {
-  width: 40%;
+  width: 60%;
 }
 
 .WalletContributions .heading .parcel-count,
