format number, show balance on expanded sidebar, fix blockie, show two dashes while loading

--- a/webapp/src/components/HomePage/Sidebar/CollapsedSidebar/SidebarStats/SidebarStats.css
+++ b/webapp/src/components/HomePage/Sidebar/CollapsedSidebar/SidebarStats/SidebarStats.css
@@ -3,7 +3,8 @@
   padding: 0;
   list-style: none;
   padding-top: 50px;
-  padding-left: 16px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .SidebarStats li {
