--- a/webapp/src/components/Icon/Icon.css
+++ b/webapp/src/components/Icon/Icon.css
@@ -65,6 +65,12 @@
   background-image: url('../../images/external-link.svg');
 }
 
+.Icon-exchange {
+  width: 12px;
+  height: 12px;
+  background-image: url('../../images/exchange.svg');
+}
+
 .Icon-twitter,
 .Icon-rocketchat,
 .Icon-github,
