Nicer etherscan tx link

--- a/webapp/src/components/Modal/TransferModal/TransferModal.css
+++ b/webapp/src/components/Modal/TransferModal/TransferModal.css
@@ -52,6 +52,10 @@
   color: #A94442;
 }
 
+.TransferModal .etherscan-link {
+  word-break: break-word;
+}
+
 .TransferModal .submit-transfer {
   text-align: center;
 }
