Add color codes button to the collapsed sidebar

--- a/webapp/src/components/HomePage/Sidebar/CollapsedSidebar/CollapsedSidebar.css
+++ b/webapp/src/components/HomePage/Sidebar/CollapsedSidebar/CollapsedSidebar.css
@@ -2,9 +2,16 @@
   width: 86px;
   height: 100%;
   cursor: pointer;
+  position: relative;
 }
 
 .CollapsedSidebar header {
   background-color: #FCFCFC;
   border-bottom: 1px solid #EDEDED;
+}
+
+.CollapsedSidebar .ColorCodesButton {
+  left: 31%;
+  bottom: 100px;
+  position: absolute;
 }
