--- a/webapp/src/components/HomePage/Sidebar/Sidebar.css
+++ b/webapp/src/components/HomePage/Sidebar/Sidebar.css
@@ -1,5 +1,12 @@
 .Sidebar {
   height: 100%;
+  top: 0;
+  left: 24px;
+  position: absolute;
+}
+
+.sidebar-content {
+  height: 100%;
   max-height: 100%;
   top: 0;
   left: -24px;
@@ -11,7 +18,7 @@
   user-select: text;
 }
 
-.Sidebar.in .fadein {
+.Sidebar .in .fadein {
   animation: 0.5s ease 0s normal forwards 1 fadein;
 }
 
