--- a/webapp/src/components/Modal/TermsModal/TermsModal.css
+++ b/webapp/src/components/Modal/TermsModal/TermsModal.css
@@ -9,6 +9,10 @@
   background-color: #FCFCFC;
 }
 
+.TermsModal .modal-header .close {
+  display: none;
+}
+
 .TermsModal .banner {
   padding: 0px 0 25px;
   border-bottom: 1px solid #EDEDED;
