--- a/webapp/src/themes/variables.css
+++ b/webapp/src/themes/variables.css
@@ -1,10 +1,26 @@
 :root {
-  --light-gray: #d3d3d3;
+  --primary: #30d7a9;
+  --secondary: #3e396b;
+
+  --text: var(--secondary);
+  --background: #FCFCFC;
+
+  --light-gray: #ededed;
   --gray: #4f4f4f;
   --dark-gray: #222222;
+
   --green: #30d7a9;
-  --red: #d1344e;
+  --dark-green: #2e7d32;
+
+  --red: #e53935;
+
   --yellow: #f2be24;
+
+  --orange: #EF6C00;
+
   --light-blue: #4db1dd;
+  --blue: #1976d2;
+
+  --purple: #3e396b;
   --dark-purple: #5d5890;
 }
