--- a/webapp/src/components/Loading/Loading.css
+++ b/webapp/src/components/Loading/Loading.css
@@ -4,6 +4,7 @@
   width: 10em;
   height: 10em;
 }
+
 .Loading {
   margin: 20px auto;
   font-size: 4px;
@@ -12,13 +13,11 @@
   border-top: 1.1em solid rgba(48, 215, 169, 0.2);
   border-right: 1.1em solid rgba(48, 215, 169, 0.2);
   border-bottom: 1.1em solid rgba(48, 215, 169, 0.2);
-  border-left: 1.1em solid #30D7A9;
-  -webkit-transform: translateZ(0);
-  -ms-transform: translateZ(0);
+  border-left: 1.1em solid var(--primary);
   transform: translateZ(0);
-  -webkit-animation: loading-animation 0.8s infinite linear;
   animation: loading-animation 0.8s infinite linear;
 }
+
 @-webkit-keyframes loading-animation {
   0% {
     -webkit-transform: rotate(0deg);
@@ -29,6 +28,7 @@
     transform: rotate(360deg);
   }
 }
+
 @keyframes loading-animation {
   0% {
     -webkit-transform: rotate(0deg);
