--- a/webapp/src/components/Modal/TermsModal/TermsModal.css
+++ b/webapp/src/components/Modal/TermsModal/TermsModal.css
@@ -1,18 +1,18 @@
 .TermsModal {
-  color: #3E396B;
+  color: var(--text);
   user-select: text;
 }
 
 .TermsModal .modal-header {
   padding: 15px 15px 0;
   border: none;
-  background-color: #FCFCFC;
+  background-color: var(--background);
 }
 
 .TermsModal .banner {
   padding: 0px 0 25px;
-  border-bottom: 1px solid #EDEDED;
-  background-color: #FCFCFC;
+  border-bottom: 1px solid var(--light-gray);
+  background-color: var(--background);
   text-align: center;
 }
 
