--- a/webapp/src/components/StaticPage/StaticPage.css
+++ b/webapp/src/components/StaticPage/StaticPage.css
@@ -8,7 +8,7 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  color: #3E396B;
+  color: var(--text);
 }
 
 .StaticPageStreched .content {
@@ -42,8 +42,9 @@
   font-size: 16px;
 }
 
+/* TODO: Button.css */
 .StaticPage .btn-primary {
-  background-color: #30D7A9;
+  background-color: var(--primary);
   color: #FFFFFF;
   margin-top: 16px;
   padding: 8px 24px;
