Remove bootstrap and update the entire repo to use semantic-react

--- a/webapp/src/components/Modal/TermsModal/TermsModal.css
+++ b/webapp/src/components/Modal/TermsModal/TermsModal.css
@@ -70,7 +70,7 @@
   text-align: center;
 }
 
-.TermsModal .get-started .Button {
+.TermsModal .get-started .button {
   padding: 11px 44px;
   border-radius: 20px;
 }
