--- a/webapp/src/components/ColorKeyPage/ColorKeyPage.css
+++ b/webapp/src/components/ColorKeyPage/ColorKeyPage.css
@@ -17,7 +17,7 @@
   padding-right: 80px;
 }
 
-.land-color-keys .land {
+.ColorKeyPage .land-color-keys .land {
   min-width: 132px;
   margin-bottom: 15px;
   margin-right: 34px;
@@ -25,7 +25,7 @@
   display: inline-block;
 }
 
-.land-color-keys .key {
+.ColorKeyPage .land-color-keys .key {
   width: 32px;
   height: 32px;
   border: 1px solid #666;
@@ -33,10 +33,14 @@
   position: relative;
 }
 
-.land-color-keys .text {
+.ColorKeyPage .land-color-keys .text {
   padding-top: 5px;
   margin-left: 8px;
   float: left;
+}
+
+.ColorKeyPage .button.primary {
+  margin-top: 16px;
 }
 
 @media (min-width: 768px) {
@@ -45,7 +49,7 @@
     max-width: 100%;
   }
 
-  .land-color-keys .land {
+  .ColorKeyPage .land-color-keys .land {
     margin-right: 14px;
   }
 }
