--- a/webapp/src/components/Modal/TransferModal/TransferModal.css
+++ b/webapp/src/components/Modal/TransferModal/TransferModal.css
@@ -74,7 +74,7 @@
   text-align: center;
 }
 
-.TransferModal .submit-transfer .Button {
+.TransferModal .submit-transfer .button {
   padding: 11px 44px;
   border-radius: 20px;
 }
