--- a/webapp/src/themes/components/Button.css
+++ b/webapp/src/themes/components/Button.css
@@ -1,8 +1,29 @@
 .ui.button {
+  margin: 0 auto;
+  padding: 10px 22px;
+  font-size: 16px;
+  border-radius: 5px;
+  line-height: 1.42857143;
+  border: 1px solid lightgray;
   font-family: 'Source Sans Pro', Helvetica, sans-serif;
-  font-weight: bold;
-  border-radius: 100px;
   text-transform: uppercase;
   background-color: white;
-  border: 1px solid lightgray;
+  cursor: pointer;
+  font-weight: normal;
+  text-align: center;
+  vertical-align: middle;
+  background-image: none;
+  display: inline-block;
+}
+
+.ui.button.primary {
+  background-color: var(--primary);
+  color: #FFF;
+  border: none;
+}
+
+.ui.button.primary:hover, .ui.button.primary:visited  {
+  background-color: var(--primary);
+  box-shadow: 0 8px 30px rgba(48, 215, 169, 0.5);
+  color: #FFF;
 }
