--- a/webapp/src/themes/components/Header.css
+++ b/webapp/src/themes/components/Header.css
@@ -1,3 +1,7 @@
+h1, h2, h3, h4, h5 {
+  font-family: "Source Sans Pro", Helvetica, sans-serif;
+}
+
 .ui.header {
   font-family: 'Source Sans Pro Light', Helvetica, sans-serif !important;
   font-weight: 400;
