--- a/webapp/src/themes/components/Menu.css
+++ b/webapp/src/themes/components/Menu.css
@@ -1,12 +1,11 @@
-.ui.secondary.pointing.menu .active.item {
-  border-color: var(--dark-purple);
-  color: var(--dark-purple);
-  transition: border-bottom-width 0.1s linear;
+.ui.secondary.pointing.menu .item:focus,
+.ui.secondary.pointing.menu .item:active {
+  outline: none;
 }
 
+.ui.secondary.pointing.menu .active.item,
 .ui.secondary.pointing.menu .active.item:hover {
   border-color: var(--dark-purple);
   color: var(--dark-purple);
-  border-bottom-width: 4px !important;
   cursor: pointer;
 }
