added parcel preview

--- a/webapp/src/components/MarketplacePage/Publication/Publication.css
+++ b/webapp/src/components/MarketplacePage/Publication/Publication.css
@@ -26,6 +26,15 @@
   top: 12px;
 }
 
+.Publication .preview {
+  height: 140px;
+  overflow: hidden;
+}
+
+.Publication .body {
+  position: relative;
+}
+
 .Publication .price {
   display: flex;
   margin: 0px;
