Send publish transaction and reflect the changes on the UI

--- a/webapp/src/components/SettingsPage/SettingsForm/SettingsForm.css
+++ b/webapp/src/components/SettingsPage/SettingsForm/SettingsForm.css
@@ -26,6 +26,7 @@
   margin-bottom: 0;
 }
 
-.SettingsForm .TransactionStatus {
+.SettingsForm .TxStatusText {
+  font-size: 80%;
   font-style: italic;
 }
