--- a/webapp/src/themes/components/Button.css
+++ b/webapp/src/themes/components/Button.css
@@ -16,7 +16,8 @@
   display: inline-block;
 }
 
-.ui.button.primary {
+.ui.button.primary,
+.ui.button.primary:active {
   background-color: var(--primary);
   color: #fff;
   border: none;
