--- a/webapp/src/components/ParcelDetailPage/ParcelDetailPage.css
+++ b/webapp/src/components/ParcelDetailPage/ParcelDetailPage.css
@@ -23,7 +23,7 @@
 }
 
 .ParcelDetail .parcel-description {
-  margin-top: 30px;
+  color: var(--dark-purple);
 }
 
 .ParcelDetail .parcel-description-empty {
