feat: minor cosmetic changes

--- a/webapp/src/components/ParcelName/ParcelName.css
+++ b/webapp/src/components/ParcelName/ParcelName.css
@@ -5,3 +5,7 @@
   font-family: 'Source Sans Pro', Helvetica, sans-serif;
   font-weight: 400;
 }
+
+.ParcelName .map.icon {
+  margin-right: 0.2em !important;
+}
