feat: shh this is a secret feature

--- a/webapp/src/components/ParcelName/ParcelName.css
+++ b/webapp/src/components/ParcelName/ParcelName.css
@@ -6,6 +6,6 @@
   font-weight: 400;
 }
 
-.ParcelName .map.icon {
-  margin-right: 0.2em !important;
+.ParcelName .marker.icon {
+  margin-right: 0.1em !important;
 }
