--- a/webapp/src/components/ParcelName/ParcelName.css
+++ b/webapp/src/components/ParcelName/ParcelName.css
@@ -1,11 +1,20 @@
-.ParcelName {
+.ParcelName,
+.ParcelName a {
   display: inline-block;
   margin-top: 0;
-  font-size: 26px;
   font-family: 'Source Sans Pro', Helvetica, sans-serif;
   font-weight: 400;
 }
 
 .ParcelName .marker.icon {
   margin-right: 0.1em !important;
+  margin-left: -0.2em !important;
+}
+
+.ParcelName .marker.icon {
+  margin-right: 0.1em !important;
+}
+
+.ParcelName.no-name .marker.icon {
+  margin-left: -0.2em !important;
 }
