fix: remove important styles

--- a/webapp/src/components/PublishPage/PublicationForm/PublicationForm.css
+++ b/webapp/src/components/PublishPage/PublicationForm/PublicationForm.css
@@ -2,6 +2,6 @@
   padding: 12px 42px;
 }
 
-.PublicationForm button + button {
-  margin-left: 20px !important;
+.PublicationForm .ui.button + .ui.button {
+  margin-left: 20px;
 }
