--- a/webapp/src/components/EditParcelPage/EditParcelForm/EditParcelForm.css
+++ b/webapp/src/components/EditParcelPage/EditParcelForm/EditParcelForm.css
@@ -2,6 +2,6 @@
   padding: 12px 42px;
 }
 
-.EditParcelForm button + button {
-  margin-left: 20px !important;
+.EditParcelForm .ui.button + .ui.button {
+  margin-left: 20px;
 }
