--- a/webapp/src/components/ParcelDetailPage/ParcelDetail/ParcelActions/ParcelActions.css
+++ b/webapp/src/components/ParcelDetailPage/ParcelDetail/ParcelActions/ParcelActions.css
@@ -1,3 +1,3 @@
-.ParcelActions button + button {
-  margin-left: 15px !important;
+.ParcelActions .ui.button + .ui.button {
+  margin-left: 15px;
 }
