feat: use new contracts API

--- a/webapp/src/themes/components/Button.css
+++ b/webapp/src/themes/components/Button.css
@@ -17,6 +17,7 @@
 }
 
 .ui.button.primary,
+.ui.button.primary:focus,
 .ui.button.primary:active {
   background-color: var(--primary);
   color: #fff;
