--- a/webapp/src/themes/components/Label.css
+++ b/webapp/src/themes/components/Label.css
@@ -1,8 +1,14 @@
-.ui.form .field > label, .ui.form .fields > label {
+.ui.form .field > label,
+.ui.form .fields > label {
   color: var(--dark-gray);
   font-weight: 400;
 }
 
-.ui.form .field.disabled > label, .ui.form .fields.disabled > label {
+.ui.form .field.disabled > label,
+.ui.form .fields.disabled > label {
   opacity: 1;
+}
+
+.ui.menu .item.active .ui.label {
+  background: var(--purple);
 }
