feat: Add TrasferParcelPage and remove transfer modal

--- a/webapp/src/components/TransferParcelPage/TransferParcelPage.css
+++ b/webapp/src/components/TransferParcelPage/TransferParcelPage.css
@@ -1,4 +1,4 @@
-.EditParcelPage .subtitle {
+.TransferParcelPage .subtitle {
   color: var(--purple);
   font-weight: 100;
   font-family: 'Source Sans Pro Light', Helvetica, sans-serif;
