feat: ParcelName styles match the text that surround the Component. Blockie changes with address

--- a/webapp/src/themes/components/Header.css
+++ b/webapp/src/themes/components/Header.css
@@ -1,13 +1,9 @@
-h1, h2, h3, h4, h5 {
-  font-family: "Source Sans Pro", Helvetica, sans-serif;
-}
-
 .ui.header {
-  font-family: 'Source Sans Pro Light', Helvetica, sans-serif !important;
+  font-family: 'Source Sans Pro Light', Helvetica, sans-serif;
   font-weight: 400;
-  color: var(--purple) !important;
+  color: var(--purple);
 }
 
 .ui.header.huge {
-  font-size: 42px !important;
+  font-size: 42px;
 }
