--- a/webapp/src/index.css
+++ b/webapp/src/index.css
@@ -13,7 +13,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: inherit;
+  font-family: "Source Sans Pro", Helvetica, sans-serif;
   font-weight: 500;
   line-height: 1.1;
   color: inherit;
